# stdiobus-cpp

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY.md  cmake_test_discovery_47e6ce3c4f.json  cmake_test_discovery_a101c428b5.json  conanfile.py  stdiobus.pc.in
.agents/skills/stdiobus-cpp/: SKILL.md
.agents/skills/stdiobus-cpp/references/: api-cheatsheet.md  cmake-integration.md  lifecycle.md  operating-modes.md  resilience-patterns.md
.agents/skills/stdiobus-cpp/scripts/: check-build-env.sh  validate-config.sh
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
benchmarks/: CMakeLists.txt  bench_bus.cpp
cmake/: ProjectOptions.cmake  Sanitizers.cmake  Warnings.cmake  stdiobus-config.cmake.in
docs/: Doxyfile  README.md  architecture.md  build.md  errors.md  kernel-implementor-guide.md  kernel-interface-contract.md  migration-guide-kernel-abstraction.md  performance.md  security.md  thread-safety.md
docs/00-overview/: 01-what-is-stdio-bus.md  01-what-is-stdiobus.md  02-invariants-and-guarantees.md
docs/01-getting-started/: 01-quickstart-embedded.md  02-quickstart-tcp.md  03-quickstart-unix-socket.md
docs/02-core-concepts/: 01-lifecycle-state-machine.md  02-callbacks-contract.md  03-event-loop-step-model.md  04-error-model.md  05-thread-safety-matrix.md  06-failure-taxonomy.md
docs/03-cpp-sdk/: 01-api-cheatsheet.md
docs/05-operating-modes/: 01-mode-capability-matrix.md
docs/06-integration-patterns/: 01-retry-timeout-circuit-breaker.md
docs/07-use-cases/: 01-complete-capabilities.md
examples/: CMakeLists.txt  async.cpp  basic.cpp  builder.cpp  config.json  echo-worker.js  runner.cpp
include/: stdiobus.hpp
include/stdiobus/: async.hpp  bus.hpp  c_kernel.hpp  echo_kernel.hpp  error.hpp  export.hpp  ffi.hpp  kernel.hpp  types.hpp  version.hpp
include/stdiobus/detail/: kernel_config.hpp
ports/vcpkg/: portfile.cmake  vcpkg.json
prebuilds/include/: stdio_bus_embed.h
scripts/: build.sh  format.sh  lint.sh  release.sh  sync-prebuilds.sh  test.sh  verify.sh
src/: bus.cpp  c_kernel.cpp  echo_kernel.cpp
test/e2e/: CMakeLists.txt  run.sh  user_app.cpp
tests/: CMakeLists.txt  test_async.cpp  test_bus.cpp  test_conformance.cpp  test_e2e.cpp  test_e2e_kernel.cpp  test_echo_kernel.cpp  test_error.cpp  test_ffi.cpp  test_integration_echo.cpp  test_kernel_parity.cpp  test_kernel_parity_new.cpp  test_kernel_properties.cpp  test_types.cpp
tests/fuzz/: CMakeLists.txt  fuzz_message_parse.cpp
